freemed project changelog
($Id$)

* Mon May 21 2001 rufustfirefly
  - updated german translation from Dr. Roesler

* Fri May 18 2001 fforest
  - API fm_make_string_array added to make sure
    a string contains a colon if not one is appened
  - generate_forms missing a </B>
  - insurance_company maint. calls fm_string_array to ensure 
    and inscomod value of 17 is changed to 17: so value_in_string
    function will parse is as an array for the multiple_choice box.
  - procedure module. removed the verification for a primary 
    insurance. patient may be rich and is paying the bill 
    himself. 

* Thu May 17 2001 fforest
  - macros added defines for covstatus ACTIVE DELETED
  - API change the coverage functions to use the above 
    instead of hard coded 0 and 1
  - patient_coverage changed to use the defines above
  - procedure_module completely re written. now uses
    wizard verification of fields. new page 2 to select
    insurance coverage. new display function.
    modform reduced to eoc, auth, voucher and comment.
  - old procedure module copied to /old

* Wed May 16 2001 fforest
  - billing_module Checkforinsbills can now take an 
    array of covtypes as a parm
  - lots of work on the new calendar stuff but admin is still
    not there. The old stuff still works:)
  - cpt.db.maint ugly bug in fee profiles while 
    running the insco list. it assumed the insco id would be
    in seqence with no gaps?
  - generate_forms now pass parms to Checkforinsbills
  - procedure module dropping proccomment

* Mon May 14 2001 rufustfirefly
  - po/de.po: added German translation from Georg Roesler
    <groesle@gwdg.de>

* Wed May 09 2001 rufustfirefly
  Released 0.2.1.2 (Thelonious/CVS)

* Wed May 09 2001 fforest
	- payment module needed </TABLE> in ledger function
      or netscape display a blank page (djordan)
    - unpaid_procedures module needed semicolons after &nbsp
      or netscape gets wierd  (djordan)

* Fri May 04 2001 fforest
   - add calendar.php menu.